# MyMiniSQL

./: CMakeLists.txt  README.md  build.sh
src/: db_manager.cpp  db_manager.hpp  main.cpp  parser.cpp  parser.hpp  storage.cpp  storage.hpp  types.cpp  types.hpp  utils.cpp  utils.hpp
